More output; added annotations